# random-land-points

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
examples/: plot_country.py  plot_random_sampling.py  random_by_continent.py  random_by_country.py  random_points.py
random_land_points/: __init__.py  countries.py
src/random_land_points/: __init__.py  contains.py  continents.py  countries.py  sampling.py
tests/: test_contains.py  test_countries.py  test_sampling.py
